--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,3 @@
-database.user = "JavaHandbookUser"
-database.password = "123456789"
-database.connectionString = "jdbc:sqlserver://localhost\\SQLEXPRESS:1433;databaseName=JavaHandbook"
+database.user = JavaHandbookUser
+database.password = 123456789
+database.connectionString = jdbc:sqlserver://localhost\\SQLEXPRESS:1433;databaseName=JavaHandbook
