--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,6 +5,18 @@
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
+    <filter>
+        <filter-name>LoginFilter</filter-name>
+        <filter-class>
+            app.filters.LoginFilter
+        </filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>LoginFilter</filter-name>
+        <url-pattern>/list</url-pattern>
+    </filter-mapping>
+
     <!-- add servlet -->
     <servlet>
         <servlet-name>add</servlet-name>
