--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -14,28 +14,84 @@
 
     <filter-mapping>
         <filter-name>LoginFilter</filter-name>
-        <url-pattern>/list</url-pattern>
+        <url-pattern>/article/add</url-pattern>
+        <url-pattern>/article/edit</url-pattern>
     </filter-mapping>
+
+    <!-- home servlet -->
+    <servlet>
+        <servlet-name>home</servlet-name>
+        <servlet-class>app.servlets.HomeServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>home</servlet-name>
+        <url-pattern>/home</url-pattern>
+    </servlet-mapping>
+
+    <!-- register servlet -->
+    <servlet>
+        <servlet-name>register</servlet-name>
+        <servlet-class>app.servlets.user.RegisterServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>register</servlet-name>
+        <url-pattern>/user/register</url-pattern>
+    </servlet-mapping>
+
+    <!-- login servlet -->
+    <servlet>
+        <servlet-name>login</servlet-name>
+        <servlet-class>app.servlets.user.LoginServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>login</servlet-name>
+        <url-pattern>/user/login</url-pattern>
+    </servlet-mapping>
+
+    <!-- logout servlet -->
+    <servlet>
+        <servlet-name>logout</servlet-name>
+        <servlet-class>app.servlets.user.LogoutServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>logout</servlet-name>
+        <url-pattern>/user/logout</url-pattern>
+    </servlet-mapping>
 
     <!-- add servlet -->
     <servlet>
         <servlet-name>add</servlet-name>
-        <servlet-class>app.servlets.AddServlet</servlet-class>
+        <servlet-class>app.servlets.article.AddServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
         <servlet-name>add</servlet-name>
-        <url-pattern>/add</url-pattern>
+        <url-pattern>/article/add</url-pattern>
     </servlet-mapping>
 
-    <!-- list servlet -->
+    <!-- edit servlet -->
     <servlet>
-        <servlet-name>list</servlet-name>
-        <servlet-class>app.servlets.ListServlet</servlet-class>
+        <servlet-name>edit</servlet-name>
+        <servlet-class>app.servlets.article.EditServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>list</servlet-name>
-        <url-pattern>/list</url-pattern>
+        <servlet-name>edit</servlet-name>
+        <url-pattern>/article/edit</url-pattern>
+    </servlet-mapping>
+
+    <!-- edit servlet -->
+    <servlet>
+        <servlet-name>show</servlet-name>
+        <servlet-class>app.servlets.article.ShowServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>show</servlet-name>
+        <url-pattern>/article/show/*</url-pattern>
     </servlet-mapping>
 </web-app>
